--- a/css/addrecipe.css
+++ b/css/addrecipe.css
@@ -1,29 +1,111 @@
+p {
+  margin: 0px;
+}
+textarea:-moz-placeholder {
+  color: rgba(255,36,0,0.5); 
+}
+textarea::-webkit-input-placeholder { 
+  color: rgba(255,36,0,0.5); 
+}
+input:-moz-placeholder {
+  color: rgba(255,36,0,0.5); 
+}
+input::-webkit-input-placeholder { 
+  color: rgba(255,36,0,0.5); 
+}
 .field_r {
-  text-align: left;
+  background: linear-gradient(to top, rgba(255,228,225,0.1), rgba(255,228,225,0.9) );
+  color: #E60000;
+  box-shadow: 0 0 15px rgba(105,21,17,0.3);
+  font-size: 20;
+  width: 272px;
+  border: 0px;
+  text-indent: 20px;
+    border-radius:10px;
+    -webkit-border-radius:10px;
+    -moz-border-radius:10px;
+    -khtml-border-radius:10px;
+    text-indent: 20px;
+    margin: 10px;
+}
+.blok {
+  background: linear-gradient(to top, rgba(199,166,0,0.5) ,rgba(255,229,97,0.5) );
+  margin-bottom: 15px;
+  width: 600px;
+  border-radius:15px;
+  -webkit-border-radius:15px;
+  -moz-border-radius:15px;
+  -khtml-border-radius:15px;
+  box-shadow: 0 0 30px rgba(0,0,0,0.3);
+}
+.block_min {
+  box-shadow: 0 0 15px rgba(105,21,17,0.3); 
+  width: 288px;
+  height: 110px;
   background: linear-gradient(to top, rgba(199,166,0,0.5) ,rgba(255,229,97,0.5) );
   color: #E60000;
-  text-shadow: 0 0 4px rgba(0,0,0,0.3);
-  border-color:#ffd700;
-  font-size: 20;
-  width: 297px;
-}
-#components_title {
-  width: 297px;
-}
-.button_r {
-  background: linear-gradient(to top, rgba(199,166,0,0.5) ,rgba(255,229,97,0.5) );
-  color: #E60000;
-  text-shadow: 0 0 4px rgba(0,0,0,0.3);
-  border-color:#ffd700;
-  width: 297px;
-  font-size: 20;
+    text-shadow: 0 0 4px rgba(0,0,0,0.3);
+  border-radius:15px;
+  -webkit-border-radius:15px;
+  -moz-border-radius:15px;
+  -khtml-border-radius:15px;
+  margin: 10px;
 }
 .field_l {
-    border-radius: 0;
-    background: transparent;
-    padding: 5px;
-    border: 0;
-    line-height: 1;
-
-    width: 270px;
+  background: linear-gradient(to top, rgba(255,228,225,0.1), rgba(255,228,225,0.9) );
+  color: #E60000;
+  box-shadow: 0 0 15px rgba(105,21,17,0.3);
+  font-size: 20;
+  width: 255px;
+  border: 0px;
+  text-indent: 20px;
+    border-radius:10px;
+    -webkit-border-radius:10px;
+    -moz-border-radius:10px;
+    -khtml-border-radius:10px;
+    text-indent: 20px;
+    margin: 10px;
   }
+.plus {
+  width: 40px;
+  height: 40px;
+  color: #E60000;
+  border-color:#ffd700;
+  font-family: RupsterScriptFree;
+  background: linear-gradient(to top, rgba(199,166,0,0.5) ,rgba(255,229,97,0.5) );
+  text-shadow: 0 0 4px rgba(0,0,0,0.3);
+      border-radius:20px;
+    -webkit-border-radius:20px;
+    -moz-border-radius:20px;
+    -khtml-border-radius:20px;
+    font-size:25;
+}
+.field_rec {
+  background: linear-gradient(to top, rgba(255,228,225,0.1), rgba(255,228,225,0.9) );
+  color: #E60000;
+  box-shadow: 0 0 15px rgba(105,21,17,0.3);
+  font-size: 20;
+  width: 600px;
+  border: 0px;
+  text-indent: 20px;
+    border-radius:10px;
+    -webkit-border-radius:10px;
+    -moz-border-radius:10px;
+    -khtml-border-radius:10px;
+    text-indent: 20px;
+    margin-bottom: 10px;
+}
+#add_button{
+  width: 250px;
+  height: 40px;
+  color: #E60000;
+  border-color:#ffd700;
+  font-family: RupsterScriptFree;
+  background: linear-gradient(to top, rgba(199,166,0,0.5) ,rgba(255,229,97,0.5) );
+  text-shadow: 0 0 4px rgba(0,0,0,0.3);
+      border-radius:20px;
+    -webkit-border-radius:20px;
+    -moz-border-radius:20px;
+    -khtml-border-radius:20px;
+    font-size:25;
+}
