--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,106 @@
+h1 a {
+  color: #E60000;
+  font-size: 16px;
+ }
+li {
+ list-style-type: none; /* Убираем маркеры */
+}
+ul {
+ margin-left: 0; /* Отступ слева в браузере IE и Opera */
+ padding-left: 0; /* Отступ слева в браузере Firefox, Safari, Chrome */
+}
+ .accordion {
+  box-shadow: 0 0 50px rgba(204,170,0,0.6);
+  width: 190px;
+  margin: 10px auto 10px;
+  background: rgba(255,255,255,0.5);
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+ }
+
+.accordion .link {
+  cursor: pointer;
+  display: block;
+  padding: 15px 15px 15px 30px;
+  color: #E60000;
+  font-size: 19px;
+  font-weight: 700;
+  border-bottom: 1px solid #E60000;
+  position: relative;
+  -webkit-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.accordion li:last-child .link {
+  border-bottom: 0;
+}
+
+.accordion li i {
+  position: absolute;
+  top: 16px;
+  left: 12px;
+  font-size: 18px;
+  color: #E60000;
+  -webkit-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.accordion li i.fa-chevron-down {
+  right: 12px;
+  left: auto;
+  font-size: 16px;
+}
+
+.accordion li.open .link {
+  color: #E60000;
+}
+
+.accordion li.open i {
+  color: #E60000;
+}
+.accordion li.open i.fa-chevron-down {
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+
+/**
+ * Submenu
+ -----------------------------*/
+ .submenu {
+  display: none;
+  background: linear-gradient(to top, rgba(199,166,0,0.5) ,rgba(255,229,97,0.5) );
+  font-size: 16px;
+ }
+
+ .submenu li {
+  border-bottom: 1px solid #E60000;
+ }
+
+ .submenu a {
+  display: block;
+  text-decoration: none;
+  color: #E60000;
+  padding: 10px;
+  -webkit-transition: all 0.25s ease;
+  -o-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+ }
+ .submenu a:hover {
+  background: #E60000;
+  color: #FFF;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+ }
+
+
+
+
 @font-face {
 font-family: RupsterScriptFree;
     src: url(../fonts/2.eot); /* Для IE5-8 */
@@ -26,54 +129,23 @@ h2 {
   font-family: RupsterScriptFree;
   color: #E60000;
   text-shadow: 0 0 4px rgba(0,0,0,0.3);
-  font-size: 30;
+  font-size: 40;
 }
 body { 
   background: url(../image/fon.jpg);  
 }
 a {
-  margin: 6px 6px 6px 6px; 
+  margin: 6px 6px 6px 0px; 
   text-decoration: none; /* Отменяем подчеркивание у ссылки */
 }
 a:visited {
-    color: #E60000; /* Цвет посещенных ссылок */
+    color: #E60000;  Цвет посещенных ссылок 
    }
 textarea {
   width: 600px; /* Ширина поля в процентах */
   height: 200px; /* Высота поля в пикселах */
   resize: none; /* Запрещаем изменять размер */
 }
-   ul {
-    width: 180px; /* Ширина меню */
-    list-style: none; /* Для списка убираем маркеры */
-    margin: 0; /* Нет отступов вокруг */
-    padding: 0; /* Убираем поля вокруг текста */
-
-   }
-   li ul {
-    display: none; /* Скрываем подменю */
-   }
-   li a {
-    display: block; /* Ссылка как блочный элемент */
-    padding: 5px; /* Поля вокруг надписи */
-    text-decoration: none; /* Подчеркивание у ссылок убираем */    
-    color: #E60000;
-    text-shadow: 0 0 8px rgba(0,0,0,0.3);
-    border-color:#ffd700;
-    font-size: 20;
-    font-weight: 400;    
-   }
-   li a:hover {
-    text-shadow: 0 0 8px rgba(199,166,0,1);   
-    background: linear-gradient(to top, rgba(199,166,0,0.5) ,rgba(255,229,97,0.5) );
-    border-radius:6px;
-    -webkit-border-radius:6px;
-    -moz-border-radius:6px;
-    -khtml-border-radius:6px;
-   }
-   li:hover ul { 
-    display: block; /* При выделении пункта курсором мыши отображается подменю */
-   }
 .verification {
   text-align: left;
   background: linear-gradient(to top, rgba(199,166,0,0.5) ,rgba(255,229,97,0.5) );
@@ -90,6 +162,13 @@ textarea {
   border-color:#ffd700;
   font-size: 20;
   width: 600px;
+  text-indent: 20px;
+    border-radius:10px;
+    -webkit-border-radius:10px;
+    -moz-border-radius:10px;
+    -khtml-border-radius:10px;
+    text-indent: 20px;
+    margin-bottom: 10px;
 }
 .button {
   background: linear-gradient(to top, rgba(199,166,0,0.5) ,rgba(255,229,97,0.5) );
@@ -99,45 +178,72 @@ textarea {
 }
 .inscriptions {
 	text-align: left;
-  	color: #E60000;
+    font-family: RupsterScriptFree;
+    color: #E60000;
   	text-shadow: 0 0 4px rgba(0,0,0,0.3);
-  	font-size: 19;
+  	font-size: 30;
+}
+.inscriptions_min {
+  text-align: left;
+    font-family: Arial;
+    color: #E60000;
+    text-shadow: 0 0 4px rgba(0,0,0,0.3);
+    font-size: 15;
+}
+#body {
+  position: absolute;
+  left: 50%;
+  width: 1200px;
+  margin-top: 5px;
+  margin-left: -600px;
 }
 #hat {
-	height: 110px;
+	height: 130px;
 	margin-top: 0px;
-	background: linear-gradient(to top, rgba(255,255,255,0), rgba(255,255,255,0.8));
-	border-radius:6px 6px 0px 0px;
-  	-webkit-border-radius:6px 6px 0px 0px;
-  	-moz-border-radius:6px 6px 0px 0px;
-  	-khtml-border-radius:6px 6px 0px 0px;
+	background: linear-gradient(to top,rgba(255,255,255,0.5), rgba(204,170,0,0.8) );
+  box-shadow: 0 0 50px rgba(204,170,0,2);
+	border-radius:30px 30px 6px 6px;
+  	-webkit-border-radius:30px 30px 6px 6px;
+  	-moz-border-radius:30px 30px 6px 6px;
+  	-khtml-border-radius:30px 30px 6px 6px;
+}
+#left_bord {
+  text-indent: 50px;
+  margin-top: 10px;
+  box-shadow: 0 0 50px rgba(204,170,0,2);
+  background: linear-gradient(to top,rgba(255,255,255,0.5), rgba(204,170,0,0.8) );
+  border-radius:50px 10px 10px 10px;
+    -webkit-border-radius:50px 10px 10px 10px;
+    -moz-border-radius:50px 10px 10px 10px;
+    -khtml-border-radius:50px 10px 10px 10px;
+  height: 60px;
+  width: 190px;
 } 
 #main {  
-  position: absolute;
-  box-shadow: 0 0 30px rgba(220,166,0,3);  
-  left: 50%;
+  margin-top: 10px;
+  box-shadow: 0 0 50px rgba(204,170,0,0.6);  
   width: 800px;
-  margin-top: 5px;
-  margin-left: -400px;
+  margin-left: 200px;
   background: rgba(255,255,255,0.5);
   border-radius:6px;
   -webkit-border-radius:6px;
   -moz-border-radius:6px;
   -khtml-border-radius:6px;
 }
+#head {
+  margin-left: 200px;
+  margin-top: 10px;
+  width: 800px;
+}
 #user {
-  position: absolute;
-  left: 50%;
-  margin: 10px;
-  margin-left: 410px;
-	margin-top: 5px;
-	background: rgba(255,255,255,0.8);
-	border: 3px solid rgba(199,166,0,1);
-	border-top: 0px; 
-	border-radius:0px 0px 15px 15px;
-  	-webkit-border-radius:0px 0px 15px 15px;
-  	-moz-border-radius:0px 0px 15px 15px;
-  	-khtml-border-radius:0px 0px 15px 15px;
+  height: 90px;
+  box-shadow: 0 0 50px rgba(204,170,0,0.6);
+  margin-top: 10px;
+	background: rgba(255,255,255,0.5);
+    border-radius:10px;
+    -webkit-border-radius:10px;
+    -moz-border-radius:10px;
+    -khtml-border-radius:10px;
 }
 #name {
     width: 700px;
@@ -151,24 +257,7 @@ textarea {
 	color: #E60000;
 	opacity: 0.6; 
 }
-#button_panel {
-  	width: 800px;
-}
-#button_menu {
-	background: rgba(255,255,255,0); 
-  	color: #E60000;
-  	width: 195px;
-  	height: 60px;
-  	border: 0px;
-  	font-size: 30;
-  	font-weight: 600;
-  	text-shadow: 0 0 4px rgba(0,0,0,0.5);
-}
-#band {
-	background: linear-gradient(to top, rgba(199,166,0,1) ,rgba(255,229,97,1) ); 
-	position: fixed;
-	height: 5px;
-	margin-left: -8px;
-	margin-top: -8px;
-	width: 100%;
+#left_panel {
+  position: absolute;
+  width: 190px;
 }
